# crashmanager

./: .clang-format  .gitignore  .gitlab-ci.yml  .vimrc  COPYING  README.md  meson.build  meson_options.txt
archaur/: PKGBUILD
common/: cd_defaults.h.in  cd_message.c  cd_message.h  cd_message_type.h.in  cd_types.h  cdm-defaults.h.in  cdm-logging.c  cdm-logging.h  cdm-message-type.h.in  cdm-message.c  cdm-message.h  cdm-options.c  cdm-options.h  cdm-types.h  cdm-utils.c  cdm-utils.h  cdm_defaults.h.in  cdm_msg.c  cdm_msg.h  cdm_msgtyp.h.in  cdm_types.h  cmgr_defaults.h.in  cmgr_msg.c  cmgr_msg.h  cmgr_msgtyp.h.in  cmgr_types.h
config/: 20-coredumper.conf.in  20-crashhandler.conf.in  51-crashhandler.conf.in  coredumper.conf  coremanager.service.in  crashmanager-dbus.conf  crashmanager.conf.in  crashmanager.service.in
crashdecoder/: cdd-main.c  cdd_main.c  cdec_main.c
crashhandler/: cdh-application.c  cdh-application.h  cdh-archive.c  cdh-archive.h  cdh-context.c  cdh-context.h  cdh-coredump.c  cdh-coredump.h  cdh-crashid.c  cdh-crashid.h  cdh-data.c  cdh-data.h  cdh-info.c  cdh-info.h  cdh-main.c  cdh-manager.c  cdh-manager.h  cdh_main.c  chdl_main.c
crashinfo/: cdi-application.c  cdi-application.h  cdi-archive.c  cdi-archive.h  cdi-journal.c  cdi-journal.h  cdi-main.c
crashmanager/: cdm-application.c  cdm-application.h  cdm-bitstore.c  cdm-bitstore.h  cdm-client.c  cdm-client.h  cdm-dbusown.c  cdm-dbusown.h  cdm-defaults.h.in  cdm-elogclt.c  cdm-elogclt.h  cdm-elogsrv.c  cdm-elogsrv.h  cdm-janitor.c  cdm-janitor.h  cdm-journal.c  cdm-journal.h  cdm-lifecycle.c  cdm-lifecycle.h  cdm-logging.c  cdm-logging.h  cdm-main.c  cdm-message-type.h.in  cdm-message.c  cdm-message.h  cdm-options.c  cdm-options.h  cdm-sdnotify.c  cdm-sdnotify.h  cdm-server.c  cdm-server.h  cdm-transfer.c  cdm-transfer.h  cdm-types.h  cdm-utils.c  cdm-utils.h  cdm_main.c  cmgr_main.c
ctests/crashtest/: crashtest.c
debian/: changelog  clean  control  crashmanager-dbg.install  crashmanager-dev.install  crashmanager.install  rules
debian/.debhelper/crashmanager-dbg/: dbgsym-build-ids
genivi/libcapiwrap/: nsm-consumer.cpp  nsm-consumer.h  nsm_consumer.cpp  nsm_consumer.h
libcdhepilog/: cdh-elogmsg.c  cdh-elogmsg.h  cdh-epilog.c  cdh-epilog.h
rpm/: crashmanager.spec
src/common/: cdm-defaults.h.in  cdm-logging.c  cdm-message.c  cdm-message.h  cdm-types.h
src/handler/: cdh-application.c  cdh-archive.c  cdh-archive.h  cdh-context.c  cdh-context.h  cdh-coredump.c  cdh-coredump.h  cdh-crashid.h  cdh-data.h  cdh-info.c  cdh-main.c  cdh-manager.c  cdh-manager.h
src/manager/: cdm-application.c  cdm-application.h  cdm-bitstore.c  cdm-bitstore.h  cdm-client.c  cdm-client.h  cdm-janitor.c  cdm-janitor.h  cdm-journal.c  cdm-journal.h  cdm-lifecycle.c  cdm-main.c  cdm-sdnotify.c  cdm-sdnotify.h  cdm-server.c  cdm-server.h  cdm-transfer.c  cdm-transfer.h
testing/crashtest/: crashtest.c
