option('CONFDIR', type : 'string', value : '/etc', description : 'System configuration directory')
option('LXC', type : 'boolean', value : false, description : 'Build LXC support for container mapping')
option('SYSTEMD', type : 'boolean', value : true, description : 'Build systemd support service watchdog')
option('GENIVI_DLT', type : 'boolean', value : false, description : 'Use GENIVI infrustructure for logging')
option('GENIVI_NSM', type : 'boolean', value : false, description : 'Use GENIVI infrustructure for lifecycle')
option('DEBUG_ATTACH', type : 'boolean', value : false, description : 'Stop crashhandler in main for debugging')
option('TESTS', type : 'boolean', value : false, description : 'Build unit tests')
option('CRASHTEST', type : 'boolean', value : true, description : 'Build crashtest application')
option('CRASHMANAGER', type : 'boolean', value : true, description : 'Build crashmanager daemon')
option('CRASHHANDLER', type : 'boolean', value : true, description : 'Build crashhandler application')
option('CRASHDECODER', type : 'boolean', value : true, description : 'Build crashdecoder application')
option('SANITIZER', type : 'boolean', value : false, description : 'Build components with ASAN')
